deploy: 5aa9d40f0f75b6ac50aba4b50c901b13461b184c

--- a/method_list.html
+++ b/method_list.html
@@ -1198,13 +1198,21 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="GR.html#inqtransformationparameters-class_method" title="GR.inqtransformationparameters (method)">inqtransformationparameters</a></span>
+      <span class='object_link'><a href="GR.html#inqtextx-class_method" title="GR.inqtextx (method)">inqtextx</a></span>
       <small>GR</small>
     </div>
   </li>
   
 
   <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="GR.html#inqtransformationparameters-class_method" title="GR.inqtransformationparameters (method)">inqtransformationparameters</a></span>
+      <small>GR</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GRCommons/GRCommonUtils.html#inquiry-class_method" title="GRCommons::GRCommonUtils.inquiry (method)">inquiry</a></span>
       <small>GRCommons::GRCommonUtils</small>
@@ -1212,7 +1220,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GRCommons/GRCommonUtils.html#inquiry_double-class_method" title="GRCommons::GRCommonUtils.inquiry_double (method)">inquiry_double</a></span>
       <small>GRCommons::GRCommonUtils</small>
@@ -1220,7 +1228,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GRCommons/GRCommonUtils.html#inquiry_int-class_method" title="GRCommons::GRCommonUtils.inquiry_int (method)">inquiry_int</a></span>
       <small>GRCommons::GRCommonUtils</small>
@@ -1228,7 +1236,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GRCommons/GRCommonUtils.html#inquiry_uint-class_method" title="GRCommons::GRCommonUtils.inquiry_uint (method)">inquiry_uint</a></span>
       <small>GRCommons::GRCommonUtils</small>
@@ -1236,7 +1244,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqviewport-class_method" title="GR.inqviewport (method)">inqviewport</a></span>
       <small>GR</small>
@@ -1244,7 +1252,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqvolumeflags-class_method" title="GR.inqvolumeflags (method)">inqvolumeflags</a></span>
       <small>GR</small>
@@ -1252,7 +1260,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqvpsize-class_method" title="GR.inqvpsize (method)">inqvpsize</a></span>
       <small>GR</small>
@@ -1260,7 +1268,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqwindow-class_method" title="GR.inqwindow (method)">inqwindow</a></span>
       <small>GR</small>
@@ -1268,7 +1276,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqwindow3d-class_method" title="GR.inqwindow3d (method)">inqwindow3d</a></span>
       <small>GR</small>
@@ -1276,7 +1284,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GRCommons/GRCommonUtils.html#int-class_method" title="GRCommons::GRCommonUtils.int (method)">int</a></span>
       <small>GRCommons::GRCommonUtils</small>
@@ -1284,7 +1292,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#interp2-class_method" title="GR.interp2 (method)">interp2</a></span>
       <small>GR</small>
@@ -1292,7 +1300,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#loadfont-class_method" title="GR.loadfont (method)">loadfont</a></span>
       <small>GR</small>
@@ -1300,7 +1308,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GRCommons/GRLogger.html#logger-class_method" title="GRCommons::GRLogger.logger (method)">logger</a></span>
       <small>GRCommons::GRLogger</small>
@@ -1308,7 +1316,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#mathtex-class_method" title="GR.mathtex (method)">mathtex</a></span>
       <small>GR</small>
@@ -1316,7 +1324,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#moveselection-class_method" title="GR.moveselection (method)">moveselection</a></span>
       <small>GR</small>
@@ -1324,7 +1332,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GRCommons/GRCommonUtils.html#narray%3F-class_method" title="GRCommons::GRCommonUtils.narray? (method)">narray?</a></span>
       <small>GRCommons::GRCommonUtils</small>
@@ -1332,7 +1340,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#ndctowc-class_method" title="GR.ndctowc (method)">ndctowc</a></span>
       <small>GR</small>
@@ -1340,7 +1348,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#nonuniformcellarray-class_method" title="GR.nonuniformcellarray (method)">nonuniformcellarray</a></span>
       <small>GR</small>
@@ -1348,7 +1356,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#nonuniformpolarcellarray-class_method" title="GR.nonuniformpolarcellarray (method)">nonuniformpolarcellarray</a></span>
       <small>GR</small>
@@ -1356,7 +1364,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#opengks-class_method" title="GR.opengks (method)">opengks</a></span>
       <small>GR</small>
@@ -1364,7 +1372,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#openws-class_method" title="GR.openws (method)">openws</a></span>
       <small>GR</small>
@@ -1372,7 +1380,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#panzoom-class_method" title="GR.panzoom (method)">panzoom</a></span>
       <small>GR</small>
@@ -1380,7 +1388,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#path-class_method" title="GR.path (method)">path</a></span>
       <small>GR</small>
@@ -1388,7 +1396,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GRCommons/GRLib.html#pkg_config_search-class_method" title="GRCommons::GRLib.pkg_config_search (method)">pkg_config_search</a></span>
       <small>GRCommons::GRLib</small>
@@ -1396,7 +1404,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#polarcellarray-class_method" title="GR.polarcellarray (method)">polarcellarray</a></span>
       <small>GR</small>
@@ -1404,7 +1412,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#polygonmesh3d-class_method" title="GR.polygonmesh3d (method)">polygonmesh3d</a></span>
       <small>GR</small>
@@ -1412,7 +1420,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#polyline-class_method" title="GR.polyline (method)">polyline</a></span>
       <small>GR</small>
@@ -1420,7 +1428,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#polyline3d-class_method" title="GR.polyline3d (method)">polyline3d</a></span>
       <small>GR</small>
@@ -1428,7 +1436,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#polymarker-class_method" title="GR.polymarker (method)">polymarker</a></span>
       <small>GR</small>
@@ -1436,17 +1444,9 @@
   </li>
   
 
-  <li class="odd ">
-    <div class="item">
-      <span class='object_link'><a href="GR.html#polymarker3d-class_method" title="GR.polymarker3d (method)">polymarker3d</a></span>
-      <small>GR</small>
-    </div>
-  </li>
-  
-
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="GR.html#precision-class_method" title="GR.precision (method)">precision</a></span>
+      <span class='object_link'><a href="GR.html#polymarker3d-class_method" title="GR.polymarker3d (method)">polymarker3d</a></span>
       <small>GR</small>
     </div>
   </li>
@@ -2158,7 +2158,23 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="GR.html#text_maxsize-class_method" title="GR.text_maxsize (method)">text_maxsize</a></span>
+      <small>GR</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="GR.html#textext-class_method" title="GR.textext (method)">textext</a></span>
+      <small>GR</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="GR.html#textx-class_method" title="GR.textx (method)">textx</a></span>
       <small>GR</small>
     </div>
   </li>
