--- a/method_list.html
+++ b/method_list.html
@@ -836,7 +836,15 @@
   </li>
   
 
-  <li class="even deprecated">
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="GR.html#gr_setresizebehaviour-class_method" title="GR.gr_setresizebehaviour (method)">gr_setresizebehaviour</a></span>
+      <small>GR</small>
+    </div>
+  </li>
+  
+
+  <li class="odd deprecated">
     <div class="item">
       <span class='object_link'><a href="GR.html#gradient-class_method" title="GR.gradient (method)">gradient</a></span>
       <small>GR</small>
@@ -844,7 +852,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#grid-class_method" title="GR.grid (method)">grid</a></span>
       <small>GR</small>
@@ -852,7 +860,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#grid3d-class_method" title="GR.grid3d (method)">grid3d</a></span>
       <small>GR</small>
@@ -860,7 +868,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#gridit-class_method" title="GR.gridit (method)">gridit</a></span>
       <small>GR</small>
@@ -868,7 +876,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#herrorbars-class_method" title="GR.herrorbars (method)">herrorbars</a></span>
       <small>GR</small>
@@ -876,7 +884,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#hexbin-class_method" title="GR.hexbin (method)">hexbin</a></span>
       <small>GR</small>
@@ -884,7 +892,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#hsvtorgb-class_method" title="GR.hsvtorgb (method)">hsvtorgb</a></span>
       <small>GR</small>
@@ -892,7 +900,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#importgraphics-class_method" title="GR.importgraphics (method)">importgraphics</a></span>
       <small>GR</small>
@@ -900,7 +908,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#initgr-class_method" title="GR.initgr (method)">initgr</a></span>
       <small>GR</small>
@@ -908,7 +916,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GRCommons/Fiddley/MemoryPointer.html#initialize-instance_method" title="GRCommons::Fiddley::MemoryPointer#initialize (method)">#initialize</a></span>
       <small>GRCommons::Fiddley::MemoryPointer</small>
@@ -916,7 +924,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GRCommons/Fiddley/Function.html#initialize-instance_method" title="GRCommons::Fiddley::Function#initialize (method)">#initialize</a></span>
       <small>GRCommons::Fiddley::Function</small>
@@ -924,7 +932,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GRCommons/GRLogger.html#initialize-instance_method" title="GRCommons::GRLogger#initialize (method)">#initialize</a></span>
       <small>GRCommons::GRLogger</small>
@@ -932,7 +940,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqbbox-class_method" title="GR.inqbbox (method)">inqbbox</a></span>
       <small>GR</small>
@@ -940,7 +948,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqbordercolorind-class_method" title="GR.inqbordercolorind (method)">inqbordercolorind</a></span>
       <small>GR</small>
@@ -948,7 +956,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqborderwidth-class_method" title="GR.inqborderwidth (method)">inqborderwidth</a></span>
       <small>GR</small>
@@ -956,7 +964,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqcharheight-class_method" title="GR.inqcharheight (method)">inqcharheight</a></span>
       <small>GR</small>
@@ -964,7 +972,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqclipxform-class_method" title="GR.inqclipxform (method)">inqclipxform</a></span>
       <small>GR</small>
@@ -972,7 +980,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqcolor-class_method" title="GR.inqcolor (method)">inqcolor</a></span>
       <small>GR</small>
@@ -980,7 +988,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqcolorfromrgb-class_method" title="GR.inqcolorfromrgb (method)">inqcolorfromrgb</a></span>
       <small>GR</small>
@@ -988,7 +996,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqcolormap-class_method" title="GR.inqcolormap (method)">inqcolormap</a></span>
       <small>GR</small>
@@ -996,7 +1004,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqcolormapinds-class_method" title="GR.inqcolormapinds (method)">inqcolormapinds</a></span>
       <small>GR</small>
@@ -1004,7 +1012,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqdspsize-class_method" title="GR.inqdspsize (method)">inqdspsize</a></span>
       <small>GR</small>
@@ -1012,7 +1020,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqfillcolorind-class_method" title="GR.inqfillcolorind (method)">inqfillcolorind</a></span>
       <small>GR</small>
@@ -1020,7 +1028,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqfillintstyle-class_method" title="GR.inqfillintstyle (method)">inqfillintstyle</a></span>
       <small>GR</small>
@@ -1028,7 +1036,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqfillstyle-class_method" title="GR.inqfillstyle (method)">inqfillstyle</a></span>
       <small>GR</small>
@@ -1036,7 +1044,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqlinecolorind-class_method" title="GR.inqlinecolorind (method)">inqlinecolorind</a></span>
       <small>GR</small>
@@ -1044,7 +1052,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqlinetype-class_method" title="GR.inqlinetype (method)">inqlinetype</a></span>
       <small>GR</small>
@@ -1052,7 +1060,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqlinewidth-class_method" title="GR.inqlinewidth (method)">inqlinewidth</a></span>
       <small>GR</small>
@@ -1060,7 +1068,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqmarkercolorind-class_method" title="GR.inqmarkercolorind (method)">inqmarkercolorind</a></span>
       <small>GR</small>
@@ -1068,7 +1076,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqmarkersize-class_method" title="GR.inqmarkersize (method)">inqmarkersize</a></span>
       <small>GR</small>
@@ -1076,7 +1084,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqmarkertype-class_method" title="GR.inqmarkertype (method)">inqmarkertype</a></span>
       <small>GR</small>
@@ -1084,7 +1092,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqmathtex-class_method" title="GR.inqmathtex (method)">inqmathtex</a></span>
       <small>GR</small>
@@ -1092,7 +1100,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqorthographicprojection-class_method" title="GR.inqorthographicprojection (method)">inqorthographicprojection</a></span>
       <small>GR</small>
@@ -1100,7 +1108,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqperspectiveprojection-class_method" title="GR.inqperspectiveprojection (method)">inqperspectiveprojection</a></span>
       <small>GR</small>
@@ -1108,7 +1116,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqprojectiontype-class_method" title="GR.inqprojectiontype (method)">inqprojectiontype</a></span>
       <small>GR</small>
@@ -1116,7 +1124,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqregenflags-class_method" title="GR.inqregenflags (method)">inqregenflags</a></span>
       <small>GR</small>
@@ -1124,9 +1132,17 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="GR.html#inqresamplemethod-class_method" title="GR.inqresamplemethod (method)">inqresamplemethod</a></span>
+      <small>GR</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="GR.html#inqresizebehaviour-class_method" title="GR.inqresizebehaviour (method)">inqresizebehaviour</a></span>
       <small>GR</small>
     </div>
   </li>
